--- a/pretix/nginx-conf/finish-tix.devops.foundation.conf
+++ b/pretix/nginx-conf/finish-tix.devops.foundation.conf
@@ -9,15 +9,14 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
     server_name tix.devops.foundation;
+    listen 443 ssl http2;
     ssl_certificate /etc/letsencrypt/live/tix.devops.foundation/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/tix.devops.foundation/privkey.pem; # managed by Certbot
-
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
     add_header Referrer-Policy same-origin;
     add_header X-Content-Type-Options nosniff;
 
