--- a/pretalx/nginx-conf/finish-talx.devopsfoundation.conf
+++ b/pretalx/nginx-conf/finish-talx.devopsfoundation.conf
@@ -25,6 +25,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Host $http_host;
+        proxy_buffers 4 64k;
+        proxy_buffer_size 64k;
     }
 
     location /media/ {
