--- a/pretix/nginx-conf/finish-tix.devops.foundation.conf
+++ b/pretix/nginx-conf/finish-tix.devops.foundation.conf
@@ -5,7 +5,6 @@ server {
 
     listen 80;
     server_name tix.devops.foundation;
-    return 301 https://tix.devops.foundation$request_uri;
 }
 
 server {
@@ -25,12 +24,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Host $http_host;
+        proxy_buffers 4 64k;
+        proxy_buffer_size 64k;
     }
 
     location /media/ {
         alias /app/pretix/data/media/;
         expires 7d;
-        access_log off;
+        access_log on;
     }
 
     location ^~ /media/cachedfiles {
@@ -45,7 +46,7 @@ server {
 
     location /static/ {
         alias /app/pretix/venv/lib/python3.10/site-packages/pretix/static.dist/;
-        access_log off;
+        access_log on;
         expires 365d;
         add_header Cache-Control "public";
     }
