--- a/pretix/pretix-conf/pretix.cfg
+++ b/pretix/pretix-conf/pretix.cfg
@@ -41,7 +41,7 @@ sessions=true
 [metrics]
 enabled=true
 user=pretix
-passphrase=devopsdaysrules
+passphrase=<REPLACETHIS>
 
 [celery]
 backend=redis://<REPLACETHIS>:6379/1
